assets/css/style.css
/*override browser default styles*/
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}



/*set page default font and font colour*/
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #4E5453;
}

/* style header */

#header-navbar, #footer-social {
  font-size: 14px;
  background-color: #C3D4CA;
  color: #4E5453;
}

/*override default link colour and underline*/
#header-navbar a, #footer-social a {
  color: #4E5453;
  text-decoration: none;
}

#header-navbar {
  padding: 0.5em 0;
}

#header-navbar ul, #footer-social ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-wrap: wrap;
}
#header-navbar li, #footer-social li {
    flex: 1;
    text-align: center;
    margin: 13px;
}

#header-navbar #header-logo {
    order: -1; /* move title to the beginning */
    text-align: left;
  }

/* style hero section */

#hero {
    width: 100%;
    position: relative;
  }

  #hero img {
    width: 100%; 
    height: auto; 
    display: block; 
  }

  #hero-text-container {
    position: absolute; 
    top: 40%; 
    left: 36%; 
    right: 20%;
  }
  
  #hero-text {
    
  }

/* style learn to crochet section */

#learn-to-crochet-container {
  background-color: aqua;
}

.learn-resources-text {
  margin: 1em;
  background-color: pink;
  padding: 10px;
}

.beginner-resources-container {
  margin: 1em;
  background-color: rgb(193, 148, 197);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.beginner-resource {
  background-color: rgb(128, 148, 179);
  max-width: 250px;
  margin: 2em;
  display: block;
}

.beginner-video{
  background-color: rgb(128, 148, 179);
  max-width: 250px;
  margin-top: 2em;
  margin-bottom: 2em;
  display: block;
}


#beginner-resource-img1, #beginner-resource-img2 {
  width: 100%;
  display: block;
  justify-content: center;
}


/* Increase header font size for tablets portrait */
@media (min-width: 481px) {
    #header-navbar {
      font-size: 120%;
    }
  }  
  /* Increase header font size for tablets landscape */
/* Increase header font size for tablets */
@media (min-width: 768px) {
    #header-navbar {
      font-size: 130%;
    }
  }
  
  /* Increase header font size for desktop screens */
  @media (min-width: 1024px) {
    #header-navbar {
      font-size: 140%;
    }
  }

